Update cache
