# docs/swagger.yaml
@@ -166,6 +166,38 @@ paths:
       summary: Get all task activities from cache
       tags:
       - task
+  /cached/tasks/{id}:
+    get:
+      description: Gets tasks of a particular user via userId.
+      parameters:
+      - description: userId
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Authorization token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/controllers.taskType'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controllers.errorResult'
+      security:
+      - ApiKeyAuth: []
+      summary: Get all Tasks of a particular user
+      tags:
+      - task
   /cached/users:
     get:
       description: Gets all users from cache.
@@ -272,8 +304,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/controllers.taskType'
-        "400":
-          description: Bad Request
+        "500":
+          description: Internal Server Error
           schema:
             $ref: '#/definitions/controllers.errorResult'
       security:
@@ -285,7 +317,7 @@ paths:
     get:
       description: Gets tasks of a particular user via userId.
       parameters:
-      - description: taskId
+      - description: userId
         in: path
         name: id
         required: true
